# GnuCash_reports

./: .gitignore  BALANCE_XACTS_USAGE.md  BALANCING_TRANSACTIONS.md  CHANGELOG.md  CLAUDE.md  COLUMBO_README.md  DEVELOPMENT.md  LICENSE  PROJECT_STATUS.md  QUICKSTART.md  README.md  SHARED_CREDIT_CARD_GUIDE.md  SNAPSHOT_DEBUGGING.md  VIOLATIONS_GUIDE.md  VIOLATIONS_IMPLEMENTATION.md  columbo.py  cross_entity_report.txt  entity-map-suggested.json  entity-map.example.json  entity_account_map.json  print_account_mapping.py  pyproject.toml  show_account_mapping.py  simple_account_tree.py
gcgaap/: __init__.py  balance_xacts.py  cli.py  config.py  cross_entity.py  entity_inference.py  entity_map.py  gnucash_access.py  repair.py  snapshot.py  validate.py  violations.py
gcgaap/commands/: _options.py  db.py  entity.py  report.py  xact.py
gcgaap/reports/: __init__.py  balance_sheet.py  income_statement.py  trial_balance.py
gcgaap/tools/: __init__.py  display_entity_tree.py  entity_account_mapper.py
tests/: conftest.py  helpers.py  test_balance_sheet.py  test_cli.py  test_config.py  test_entity_map.py  test_gnucash_access.py  test_income_statement.py  test_repair.py  test_trial_balance.py  test_validate.py
